--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export -o docs/",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,7 +13,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "next": "12.2.3",
+    "all": "^0.0.0",
+    "next": "^12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.54.1"
